@@ -1,3 +1,12 @@
+2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>
+
+	* flumotion/test/Makefile.am:
+	* flumotion/test/test_mpegts.py (added):
+	Added simple mpegts-mux component test.
+	* flumotion/test/test_component.py (deleted):
+	* flumotion/test/test_hls_ring.py:
+	Renamed file to match test name.
+
 2009-12-18  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/test/test_component.py (added):
